--- a/index.html
+++ b/index.html
@@ -9,18 +9,12 @@ End
 
 
 <script type="text/JavaScript">
-  function httpGet(theUrl)
-  {
-    var xmlHttp = null;
-
-    xmlHttp = new XMLHttpRequest();
-    xmlHttp.open( "GET", theUrl, false );
-    xmlHttp.send( null );
-    return xmlHttp.responseText;
-  }
-  var a = httpGet("https://movieelites.github.io/play.php?id=22"));
-alert(a);
-//var jsonData = JSON.parse(a);
- alert(a.description);
+  fetch('http://tools.buzzstream.com/metaDataService?url=http://movieelites.orgfree.com/play.php?id=3', {
+  method: "GET",
+  headers: {"Content-type": "application/json;charset=UTF-8"}
+})
+.then(response => response.json()) 
+.then(json => console.log(json)); 
+.catch(err => console.log(err));
   </script>
 </html>
