--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ End
 
 
 
-<script type="text/JavaScript">
+<script>
   fetch('http://tools.buzzstream.com/metaDataService?url=http://movieelites.orgfree.com/play.php?id=3', {
   method: "GET",
   headers: {"Content-type": "application/json;charset=UTF-8"}
 })
 .then(response => response.json()) 
-.then(json => console.log(json)); 
-.catch(err => console.log(err));
+.then(json => alert(json)); 
+.catch(err => alert(err));
   </script>
 </html>
