--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@ function yourCallBackFunction(err, data){
  var data = getJSON(`http://tools.buzzstream.com/metaDataService?url=http://movieelites.orgfree.com/play.php?id=3`, yourCallBackFunction);
 alert(data);
  }
-
+statget()
   </script>
 </html>
